<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_account">

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.utf_pbp_f_4.ui.home.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_books"
        android:name="com.example.utf_pbp_f_4.books.TampilDataBuku"
        android:label="@string/books"
        tools:layout="@layout/fragment_tampil_data_buku" />

    <fragment
        android:id="@+id/navigation_myBooks"
        android:name="com.example.utf_pbp_f_4.ui.myBooks.MyBooksFragment"
        android:label="@string/myBooks"
        tools:layout="@layout/fragment_mybooks" />
</navigation>