<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.home.AccountFragment">

    <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_baseline_account_box_240"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">

        <LinearLayout
            android:id="@+id/ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="ID               : "
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/id"
                android:hint="ID" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/ID">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="Username : "
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/username"
                android:hint="Username" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/Username">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="Email         : "
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/email"
                android:hint="Email" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/email">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="Alamat      : "
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/alamat"
                android:hint="Alamat" />
        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_below="@id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="#D32F2F"
        android:text="@string/logout" />
</LinearLayout>