<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:cardUseCompatPadding="true"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp">

            <ImageView
                android:id="@+id/tvImgURL"
                android:layout_width="78dp"
                android:layout_height="117dp"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <RelativeLayout
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp">

                <LinearLayout
                    android:id="@+id/ISBN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:text="@string/isbn"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvISBN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/isbn"
                        android:hint="ISBN" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nama_buku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/ISBN">

                    <TextView
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_buku"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvNamaBuku"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_buku"
                        android:hint="Nama Buku" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/nama_buku">

                    <TextView
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:hint="Genre" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="75dp"
                    android:layout_below="@id/genre">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnKembalikan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/kembalikan"
                        android:backgroundTint="#DC143C" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>



</layout>